--- a/client-app/package.json
+++ b/client-app/package.json
@@ -10,7 +10,10 @@
   },
   "dependencies": {
     "bootstrap": "^5.3.2",
+    "dotenv": "^16.4.5",
+    "mongodb": "^6.5.0",
     "next": "14.1.0",
+    "node-schedule": "^2.1.1",
     "react": "^18",
     "react-dom": "^18",
     "uuid": "^9.0.1"
