--- a/discord-bot/package.json
+++ b/discord-bot/package.json
@@ -1,5 +1,6 @@
 {
   "name": "discord-bot",
+  "type": "commonjs",
   "version": "1.0.0",
   "description": "parse, input, and store user-generated Wordles from message channel",
   "main": "index.js",
@@ -13,6 +14,7 @@
   "dependencies": {
     "discord.js": "^14.14.1",
     "dotenv": "^16.4.5",
-    "mongodb": "^6.5.0"
+    "mongodb": "^6.5.0",
+    "node-schedule": "^2.1.1"
   }
 }
